# pubsub_broker-less

./: CMakeLists.txt  README.md
open62541/src_generated/: open62541.pc
open62541/src_generated/open62541/: config.h  namespace0_generated.c  nodeids.h  statuscodes.c  statuscodes.h  transport_generated.c  transport_generated.h  transport_generated_encoding_binary.h  transport_generated_handling.h  types_generated.c  types_generated.h  types_generated_encoding_binary.h  types_generated_handling.h
